After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 666192 - Random PIN code is used even if I choose a fixed one
Random PIN code is used even if I choose a fixed one
Status: RESOLVED FIXED
Product: gnome-bluetooth
Classification: Core
Component: wizard
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gnome-bluetooth-general-maint@gnome.bugs
gnome-bluetooth-general-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2011-12-14 18:29 UTC by Daniele Forsi
Modified: 2011-12-18 10:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix non random PIN codes and show data from PIN database (10.80 KB, patch)
2011-12-14 20:08 UTC, Daniele Forsi
reviewed Details | Review
wizard: do not use a random PIN if user choose a fixed one (1.17 KB, patch)
2011-12-18 10:45 UTC, Daniele Forsi
none Details | Review

Description Daniele Forsi 2011-12-14 18:29:20 UTC
Step to reproduce:
1) start to pair my phone
2) choose "0000" or another fixed PIN or write a PIN in the text entry
3) press "Next"
4) a random PIN is shown and used instead of what I chose in step 2

The attached patch does two things:
1) honour the choice of fixed PIN or user input
2) give the user a feedback for what is read from the PIN database (if it's a maximum length then it is enforced by the text entry; if it's one of "0000", "1111", "1234" or "NULL" then the corresponding radio button is selected else it's shown in the text entry and can be modified)
Comment 1 Daniele Forsi 2011-12-14 20:08:26 UTC
Created attachment 203512 [details] [review]
Fix non random PIN codes and show data from PIN database
Comment 2 Bastien Nocera 2011-12-16 17:16:36 UTC
Review of attachment 203512 [details] [review]:

"change"

The patch looks good though invasive. If you're tested this thoroughly, I'm happy for you to commit it to master.

::: wizard/main.c
@@ +149,3 @@
 	target_ssp = FALSE;
 
+	/* Only random PIN codes need to be showed; other codes are meant for

shown.
Comment 3 Daniele Forsi 2011-12-18 10:44:22 UTC
Comment on attachment 203512 [details] [review]
Fix non random PIN codes and show data from PIN database

I'm going to push the changes separately.
Comment 4 Daniele Forsi 2011-12-18 10:45:12 UTC
Created attachment 203785 [details] [review]
wizard: do not use a random PIN if user choose a fixed one

User input was used only in the select_device_changed() callback.