wizard: do not use a random PIN if user choose a fixed one

User input was checked only in the select_device_changed() callback.

https://bugzilla.gnome.org/show_bug.cgi?id=666192