wizard/main.c
@@ -163,6 +163,7 @@ pincode_callback (GDBusMethodInvocation *invocation,
 	/* Only show the pincode page if the pincode isn't automatic */
 	if (automatic_pincode == FALSE)
 		gtk_assistant_set_current_page (window_assistant, PAGE_SETUP);
+	g_debug ("Using pincode \"%s\"", pincode);
 	g_dbus_method_invocation_return_value (invocation, g_variant_new ("(s)", pincode));
 
 	return TRUE;
@@ -778,6 +779,9 @@ pin_option_button_clicked (GtkButton *button,
 
 	gtk_dialog_run (GTK_DIALOG (pin_dialog));
 	gtk_widget_hide (pin_dialog);
+	g_free (pincode);
+	pincode = g_strdup (user_pincode);
+	automatic_pincode = user_pincode != NULL;
 }
 
 static int
